tests/fixtures/invalid/divmod_list_bytes.py
# Cannot call divmod() with List[int], Bytes
x = divmod([1, 2, 3], b"hello")
